# OpenGL-Template-Linux

./: CMakeLists.txt  README.md
assets/shaders/: shader.frag  shader.vert
glad/include/glad/: glad.h
glad/src/: glad.c
include/: assets.h  shader.h
src/: glad.c  main  main.cpp
